--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.529.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.3.3",
+    "aws-sdk": "^2.1575.0",
+    "dotenv": "^16.4.5",
+    "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
