--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.3.3",
     "aws-sdk": "^2.1575.0",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
