--- a/package.json
+++ b/package.json
@@ -23,15 +23,22 @@
     "@aws-sdk/client-s3": "^3.529.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/graphql": "^12.1.1",
     "@nestjs/platform-express": "^10.3.3",
+    "@nestjs/typeorm": "^10.0.2",
     "aws-sdk": "^2.1575.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
+    "graphql": "^16.8.1",
+    "graphql-tools": "^9.0.1",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "mysql": "^2.18.1",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
