--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.529.1",
+    "@nestjs/apollo": "^12.1.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.1.1",
     "@nestjs/platform-express": "^10.3.3",
     "@nestjs/typeorm": "^10.0.2",
+    "apollo-server-core": "^3.13.0",
+    "apollo-server-express": "^3.13.0",
     "aws-sdk": "^2.1575.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
