--- a/package.json
+++ b/package.json
@@ -20,36 +20,54 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.529.1",
+    "@aws-sdk/client-s3": "^3.613.0",
+    "@aws-sdk/s3-request-presigner": "^3.613.0",
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/apollo": "^12.1.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.1.1",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.3",
+    "@nestjs/schedule": "^4.0.2",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
     "apollo-server-core": "^3.13.0",
     "apollo-server-express": "^3.13.0",
-    "aws-sdk": "^2.1575.0",
-    "bcrypt": "^5.1.1",
+    "axios": "^1.6.8",
+    "bcrypt": "^5.1.0",
+    "class-validator": "^0.14.1",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
+    "firebase-admin": "^12.1.1",
+    "fs": "^0.0.1-security",
     "graphql": "^16.8.1",
     "graphql-tools": "^9.0.1",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.13",
+    "passport-kakao": "^1.0.1",
+    "passport-naver": "^1.0.6",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.2.0",
+    "request-ip": "^3.3.0",
     "rxjs": "^7.8.1",
+    "sharp": "^0.32.6",
     "swagger-ui-express": "^5.0.0",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "uuid": "^9.0.1",
+    "xlsx": "^0.18.5",
+    "xlsx-js-style": "^1.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@types/express": "^4.17.17",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
