--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.1.1",
+    "@nestjs/mongoose": "^10.1.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.3",
     "@nestjs/schedule": "^4.0.2",
@@ -46,6 +47,7 @@
     "graphql-tools": "^9.0.1",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "mongoose": "^8.7.3",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "mysql": "^2.18.1",
