--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,13 +11,13 @@ services:
     restart: always
     ports:
       - 27017:27017
-    command: ["mongod", "--replSet", "rs0", "--bind_ip_all"]
+    command: sh -c "mongod --replSet rs0 --bind_ip_all"
     volumes:
       - mongo1data:/data/db
     networks:
       - mongo-net
     healthcheck:
-      test: ["CMD", "mongo", "--eval", "db.adminCommand('ping')"]
+      test: ["CMD-SHELL", "mongosh --eval 'db.adminCommand(\"ping\")' || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -28,13 +28,13 @@ services:
     restart: always
     ports:
       - 27018:27017
-    command: ["mongod", "--replSet", "rs0", "--bind_ip_all"]
+    command: sh -c "mongod --replSet rs0 --bind_ip_all"
     volumes:
       - mongo2data:/data/db
     networks:
       - mongo-net
     healthcheck:
-      test: ["CMD", "mongo", "--eval", "db.adminCommand('ping')"]
+      test: ["CMD-SHELL", "mongosh --eval 'db.adminCommand(\"ping\")' || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -45,13 +45,13 @@ services:
     restart: always
     ports:
       - 27019:27017
-    command: ["mongod", "--replSet", "rs0", "--bind_ip_all"]
+    command: sh -c "mongod --replSet rs0 --bind_ip_all"
     volumes:
       - mongo3data:/data/db
     networks:
       - mongo-net
     healthcheck:
-      test: ["CMD", "mongo", "--eval", "db.adminCommand('ping')"]
+      test: ["CMD-SHELL", "mongosh --eval 'db.adminCommand(\"ping\")' || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -71,7 +71,7 @@ services:
     command: >
       sh -c "
         sleep 5 &&
-        mongosh --host mongo1 --eval '
+        mongo --host mongo1 --eval '
           rs.initiate({
             _id: \"rs0\",
             members: [
@@ -85,12 +85,18 @@ services:
       "
     restart: "no"
 
-  nestjs:
+  mynest:
     build: .
     container_name: mynest
     ports:
       - 7000:3000
     depends_on:
+      mongo1:
+        condition: service_healthy
+      mongo2:
+        condition: service_healthy
+      mongo3:
+        condition: service_healthy
       mongo-setup:
         condition: service_completed_successfully
     environment:
